Event loop loom carrier (#11704)
* Netty 4.2

* Event loop loom carrier
Adds support for running loom threads on the event loop.

* fix continuation run

* implement client affinity for carrier thread

* update to final

* adjust reflect config

* adjust reflect config

* improve client pool

* new pool

* progress

* fix redispatch

* progress

* progress

* docs

* fixes

* fix merge

* avoid unnecessary wakeup

* add suppression

* fix todo

* set max concurrent http1 connection count

* checkstyle

* remove pointless try

* doc

* limit loom nesting depth

* changes

* progress

* move event loop to a dedicated virtual thread to avoid deadlocks

* add legacy pool implementation

* reimplement work spilling

* Move back to newThreadPerTaskExecutor conditionally

* separate io thread scheduler

* config options, sticky loop

* Netty 4.2.2.Final

* IdleStateHandler now supports ticker

* workaround for MemorySegment issue

* conditional

* better workaround

* update version range

* disable cleaner only until jdk 25

* cleanup

* cleanup

* cleanup

* docs

* thread names changed

* thread names changed